methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:5: error: type mismatch;
 found   : Unit
 required: Boolean
  while(!isOverBaggle()){
  ^